@@ -461,6 +461,66 @@ parameter_list|)
 block|{
 comment|// expected exception
 block|}
+name|Payload
+name|clone
+init|=
+operator|(
+name|Payload
+operator|)
+name|payload
+operator|.
+name|clone
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|payload
+operator|.
+name|length
+argument_list|()
+argument_list|,
+name|clone
+operator|.
+name|length
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|payload
+operator|.
+name|length
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|assertEquals
+argument_list|(
+name|payload
+operator|.
+name|byteAt
+argument_list|(
+name|i
+argument_list|)
+argument_list|,
+name|clone
+operator|.
+name|byteAt
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|// Tests whether the DocumentWriter and SegmentMerger correctly enable the
 comment|// payload bit in the FieldInfo
@@ -2625,6 +2685,14 @@ specifier|private
 name|int
 name|offset
 decl_stmt|;
+DECL|field|payload
+name|Payload
+name|payload
+init|=
+operator|new
+name|Payload
+argument_list|()
+decl_stmt|;
 DECL|method|PayloadFilter
 specifier|public
 name|PayloadFilter
@@ -2671,24 +2739,31 @@ DECL|method|next
 specifier|public
 name|Token
 name|next
-parameter_list|()
+parameter_list|(
+name|Token
+name|token
+parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|Token
-name|nextToken
-init|=
+name|token
+operator|=
 name|input
 operator|.
 name|next
-argument_list|()
-decl_stmt|;
+argument_list|(
+name|token
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
-name|nextToken
+name|token
 operator|!=
 literal|null
-operator|&&
+condition|)
+block|{
+if|if
+condition|(
 name|offset
 operator|+
 name|length
@@ -2698,12 +2773,35 @@ operator|.
 name|length
 condition|)
 block|{
-name|nextToken
+name|Payload
+name|p
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|p
+operator|==
+literal|null
+condition|)
+block|{
+name|p
+operator|=
+operator|new
+name|Payload
+argument_list|()
+expr_stmt|;
+name|token
 operator|.
 name|setPayload
 argument_list|(
-operator|new
-name|Payload
+name|p
+argument_list|)
+expr_stmt|;
+block|}
+name|p
+operator|.
+name|setData
 argument_list|(
 name|data
 argument_list|,
@@ -2711,15 +2809,25 @@ name|offset
 argument_list|,
 name|length
 argument_list|)
-argument_list|)
 expr_stmt|;
 name|offset
 operator|+=
 name|length
 expr_stmt|;
 block|}
+else|else
+block|{
+name|token
+operator|.
+name|setPayload
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 return|return
-name|nextToken
+name|token
 return|;
 block|}
 block|}
